--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Round 6 - AR</title>
-</head>
-<body>
   <script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
-  <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: false;">
-    <a-marker preset="hiro">
+</head>
+<body>
+  <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: true;">
+    <a-marker preset="custom" type="pattern" url="/squid-game-white.patt">
       <a-box position= "0 1 0" material="opacity: 0.5; color: #F70087;"></a-box>
     </a-marker>
     <a-entity camera></a-entity>
