Try black marker

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: true;">
-    <a-marker preset="custom" type="pattern" url="/squid-game-white.patt">
+    <a-marker preset="custom" type="pattern" url="/squid-game-black.patt">
       <a-box position= "0 1 0" material="opacity: 0.5; color: #F70087;"></a-box>
     </a-marker>
     <a-entity camera></a-entity>
