Try different marker

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 </head>
 <body>
   <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: true;">
-    <a-marker preset="custom" type="pattern" url="/squid-game-black.patt">
-      <a-box position= "0 1 0" material="opacity: 0.5; color: #F70087;"></a-box>
+    <a-marker preset="custom" type="pattern" url="/default.patt">
+      <a-box position="0 1 0" material="opacity: 0.5; color: #F70087;"></a-box>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
