--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
   <title>Round 6 - AR</title>
   <script src="https://aframe.io/releases/0.9.0/aframe.min.js"></script>
   <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
+  <script src="https://rawgit.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
 </head>
 <body>
   <a-scene embedded arjs="sourceType: webcam; debugUIEnabled: true;">
     <a-marker preset="custom" type="pattern" url="/default.patt">
-      <a-box position="0 1 0" material="opacity: 0.5; color: #F70087;"></a-box>
+      <a-entity gltf-model="url(/squid-game/scene.gltf)"></a-entity>
     </a-marker>
     <a-entity camera></a-entity>
   </a-scene>
